
2009-09-07  Chris Brannon <cmbrannon79@gmail.com>

	* Switched to arch=('any').  Added twisted as optdepend.

2009-08-05  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for x86_64: 0.10

2008-11-04  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 0.9.1

2008-09-14  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for x86_64: 0.9

2008-09-14  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 0.9

2008-06-04  Mateusz Herych <heniekk@gmail.com>

	* Updated for x86_64 - 0.8.4 

2008-06-03  Douglas Soares de Andrade  <dsa@aur.archlinux.org>

	* Updated for i686 - 0.8.4
