@@ -1,4 +1,10 @@
 
+2010-03-08  Chris Brannon <cmbrannon79@gmail.com>
+
+	* Added some optdepends.  Minor PKGBUILD fixes
+	* (replaced $startdir/pkg and $startdir/src; quote variables).
+	* Split out a -docs package.  Previously, docs were removed.
+
 2009-09-07  Chris Brannon <cmbrannon79@gmail.com>
 
 	* Switched to arch=('any').  Added twisted as optdepend.
